# mcp-utility-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp-client.py  pyproject.toml  requirements-core.txt  requirements.txt  server.py  server1.py
