[project]
name = "mcp-utility-server"
version = "0.1.0"
description = "MCP servers with daily utility tools and optional LangChain agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
sse = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
langchain = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "duckduckgo-search>=6.0.0",
]
all = [
    "mcp-utility-server[sse,langchain]",
]

[tool.uv]
package = false
